[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meditation-guide-ai-mcp"
version = "0.1.0"
description = "Deliver guided meditation scripts, breathing exercises, and mindfulness timers."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
]

[project.scripts]
meditation_guide_ai_mcp = "meditation_guide_ai_mcp.server:main"
